# mail-mcp

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  appcast.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/mail-mcp-admin/: Cargo.toml
crates/mail-mcp-admin/src/: ipc_client.rs  main.rs
crates/mail-mcp-core/: Cargo.toml
crates/mail-mcp-core/migrations/: 0001_init.sql
crates/mail-mcp-core/src/: accounts.rs  cache.rs  error.rs  lib.rs  logging.rs  paths.rs  secrets.rs  storage.rs  types.rs
crates/mail-mcp-core/src/ipc/: messages.rs  mod.rs  server.rs  transport.rs
crates/mail-mcp-core/src/oauth/: google.rs  loopback.rs  microsoft.rs  mod.rs
crates/mail-mcp-core/src/permissions/: approvals.rs  enforce.rs  mod.rs
crates/mail-mcp-core/src/providers/: mod.rs  trait.rs  types.rs
crates/mail-mcp-core/src/providers/gmail/: client.rs  compose.rs  labels.rs  messages.rs  mod.rs  parse.rs  provider.rs  trash.rs  triage.rs
crates/mail-mcp-core/src/providers/m365/: compose.rs  folders.rs  messages.rs  mod.rs  parse.rs  provider.rs  triage.rs
crates/mail-mcp-daemon/: Cargo.toml
crates/mail-mcp-daemon/src/: ipc_handler.rs  lifecycle.rs  main.rs
crates/mail-mcp-daemon/src/mcp/: dispatch.rs  mod.rs  server.rs  tools.rs
crates/mail-mcp-daemon/tests/: integration_smoke.rs
crates/mail-mcp-stdio/: Cargo.toml
crates/mail-mcp-stdio/src/: main.rs
crates/mail-mcp-stdio/tests/: shim.rs
docs/: threat-model.md
docs/superpowers/plans/: 2026-05-01-v0.1a-headless-backend.md  2026-05-01-v0.1b-macos-tray.md  2026-05-02-v0.1c-windows-tray.md  2026-05-02-v0.1d-linux-tray.md  2026-05-02-v0.2.0-m365-provider.md  2026-05-03-v0.3-realtime-events.md  2026-05-03-v0.4-calendar.md  2026-05-03-v0.5-saved-queries-and-rules.md
docs/superpowers/specs/: 2026-05-01-mail-mcp-design.md  2026-05-01-v0.1b-macos-tray-design.md  2026-05-02-v0.1c-windows-tray-design.md  2026-05-02-v0.1d-linux-tray-design.md  2026-05-02-v0.2-additional-providers-design.md  2026-05-02-v0.3-realtime-events-design.md  2026-05-02-v0.4-calendar-design.md  2026-05-02-v0.5-saved-queries-and-rules-design.md  2026-05-02-v1.0-stable-release-design.md
proto/: ipc-schema.json
tray-app/: .gitignore  Brewfile  Config-Default.xcconfig  README.md  project.yml
tray-app-linux/: .gitignore  README.md  meson.build  meson_options.txt
tray-app-linux/BuildScripts/: build-daemon.sh
tray-app-linux/src/: config.h.in  daemon_launcher.c  daemon_launcher.h  main.c  meson.build  paths.c  paths.h
tray-app-linux/src/ipc/: ipc_client.c  ipc_client.h  models.c  models.h  notifications.c  notifications.h
tray-app-linux/tests/: meson.build  mock_uds_server.c  mock_uds_server.h  test_ipc_client.c  test_models.c  test_notifications.c  test_paths.c
tray-app-win/: .gitignore  MailMCP.sln  README.md
tray-app-win/BuildScripts/: build-daemon.ps1
tray-app-win/MailMCP/: App.xaml  App.xaml.cs  DaemonLauncher.cs  Directory.Build.targets  MailMCP.csproj  Program.cs  TrayController.cs
tray-app-win/MailMCP.Tests/: IpcClientTests.cs  MailMCP.Tests.csproj  MockIpcServer.cs  ModelsTests.cs  PathsTests.cs
tray-app-win/MailMCP/Approvals/: ApprovalCoordinator.cs
tray-app-win/MailMCP/IPC/: IpcClient.cs  Models.cs  Paths.cs
tray-app-win/MailMCP/Properties/: launchSettings.json
tray-app-win/MailMCP/ViewModels/: AccountsViewModel.cs  PermissionsViewModel.cs  StatusViewModel.cs
tray-app/BuildScripts/: build-daemon.sh  build-dmg.sh  exportOptions.plist  notarize.sh
tray-app/MailMCP/: App.swift  DaemonLauncher.swift  MenuBarController.swift  Updater.swift
tray-app/MailMCP.xcodeproj/: project.pbxproj
tray-app/MailMCP.xcodeproj/xcshareddata/xcschemes/: MailMCP.xcscheme
tray-app/MailMCP/Approvals/: ApprovalCoordinator.swift
tray-app/MailMCP/IPC/: IpcClient.swift  Models.swift  Paths.swift
tray-app/MailMCP/Resources/: Info.plist
tray-app/MailMCP/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
tray-app/MailMCP/Settings/: AboutPane.swift  AccountsPane.swift  GeneralPane.swift  PermissionsPane.swift  SettingsWindow.swift
tray-app/MailMCP/ViewModels/: AccountsViewModel.swift  PermissionsViewModel.swift  StatusViewModel.swift
tray-app/MailMCP/Wizard/: AddAccountView.swift  AutostartView.swift  ConfigClientView.swift  OAuthView.swift  WelcomeView.swift  WizardPermissionsView.swift  WizardWindow.swift
tray-app/MailMCPTests/: IpcClientTests.swift  MockIpcServer.swift  ModelsTests.swift  PathsTests.swift
tray-app/MailMCPUITests/: WizardSmokeTests.swift
