[package]
name = "mail-mcp-admin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mail-mcp-admin"
path = "src/main.rs"

[dependencies]
mail-mcp-core = { path = "../mail-mcp-core" }
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
